--- a/roles/generate_compose/templates/docker-compose.yml.j2
+++ b/roles/generate_compose/templates/docker-compose.yml.j2
@@ -420,3 +420,21 @@ services:
     networks:
       - net
 {% endif %}
+
+{% if "portainer" in include_service|default([]) %}
+  portainer:
+    image:  {{registry_url}}{{project}}-portainer:latest
+    container_name: {{project}}-portainer
+    restart: always
+    command: --admin-password "{{ conf['portainer_admin_account_password'] }}" -H unix:///var/run/docker.sock
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - {{docker_data_dir}}/portainer/data:/data
+    environment:
+      - VIRTUAL_HOST=portainer.{{ openldap['ldap_domain'] }}
+      - VIRTUAL_PORT=9000
+    networks:
+      - net
+{% endif %}
