Move some ldap config to compose file

--- a/roles/generate_compose/templates/docker-compose.yml.j2
+++ b/roles/generate_compose/templates/docker-compose.yml.j2
@@ -48,20 +48,20 @@ services:
       LDAP_DOMAIN: "{{ conf['domain'] }}"
       LDAP_ADMIN_PASSWORD: "{{ openldap['ldap_admin_password'] }}"
       LDAP_CONFIG_PASSWORD: "{{ openldap['ldap_config_password'] }}"
-      LDAP_READONLY_USER: "{{ openldap['ldap_readonly_user'] }}"
+      LDAP_READONLY_USER: "true"
       LDAP_READONLY_USER_USERNAME: "{{ openldap['ldap_readonly_user_username'] }}"
       LDAP_READONLY_USER_PASSWORD: "{{ openldap['ldap_readonly_user_password'] }}"
-      LDAP_TLS: "{{ openldap['ldap_tls'] }}"
-      LDAP_TLS_CRT_FILENAME: "{{ openldap['ldap_tls_crt_filename'] }}"
-      LDAP_TLS_KEY_FILENAME: "{{ openldap['ldap_tls_key_filename'] }}"
-      LDAP_TLS_DH_PARAM_FILENAME: "{{ openldap['ldap_tls_dh_param_filename'] }}"
-      LDAP_TLS_CA_CRT_FILENAME: "{{ openldap['ldap_tls_ca_crt_filename'] }}"
-      LDAP_TLS_ENFORCE: "{{ openldap['ldap_tls_enforce'] }}"
-      LDAP_TLS_CIPHER_SUITE: "{{ openldap['ldap_tls_cipher_suite'] }}"
-      LDAP_TLS_VERIFY_CLIENT: "{{ openldap['ldap_tls_verify_client'] }}"
-      KEEP_EXISTING_CONFIG: "{{ openldap['keep_existing_config'] }}"
-      LDAP_REMOVE_CONFIG_AFTER_SETUP: "{{ openldap['ldap_remove_config_after_setup'] }}"
-      LDAP_SSL_HELPER_PREFIX: "{{ openldap['ldap_ssl_helper_prefix'] }}"
+      LDAP_TLS: "true"
+      LDAP_TLS_CRT_FILENAME: "cert.crt"
+      LDAP_TLS_KEY_FILENAME: "cert.key"
+      LDAP_TLS_DH_PARAM_FILENAME: "dhparam.pem"
+      LDAP_TLS_CA_CRT_FILENAME: "ca.crt"
+      LDAP_TLS_ENFORCE: "false"
+      LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
+      LDAP_TLS_VERIFY_CLIENT: "try"
+      KEEP_EXISTING_CONFIG: "false"
+      LDAP_REMOVE_CONFIG_AFTER_SETUP: "true"
+      LDAP_SSL_HELPER_PREFIX: "ldap"
     volumes:
       - {{docker_data_dir}}/openldap/var/lib/ldap:/var/lib/ldap
       - {{docker_data_dir}}/openldap/etc/ldap/slapd.d:/etc/ldap/slapd.d
