Add containers backup

--- a/roles/generate_compose/templates/control.j2
+++ b/roles/generate_compose/templates/control.j2
@@ -25,8 +25,9 @@ DELIM_TAG="!!"
 DELIM_REGISTRY="__"
 
 backup() {
-    local tag=$1
+    local original_tag=$1
 
+    local backup_tag=bkp_${DATE_TAG}
     local backup_to_dir=${BACKUP_DIR}/${DATE_TAG}
     local backup_docker_images_dir=${backup_to_dir}/docker_images
 
@@ -34,14 +35,33 @@ backup() {
     local pki_backup_file=pki.tar.gz
     local docker_data_backup_file=docker_data.tar.gz
 
-    local images=$(docker images \
-    | grep "${IMAGES_NAME_SUFFIX}" \
-    | grep "$tag" \
-    | awk '{print $1";"$2}')
-
     mkdir -p $backup_docker_images_dir
 
+    local containers=$(docker ps -a \
+    | grep "${IMAGES_NAME_SUFFIX}" \
+    | awk '{print $1";"$2}')
+
+    echo Saving docker containers ...
+
+    for i in $containers; do
+      local cont_and_name=(${i//;/ })
+      local cont=${cont_and_name[0]}
+      local name=${cont_and_name[1]}
+
+      echo "    ${name}"
+      docker commit ${cont} ${name}__${backup_tag}
+    done
+
+    echo Stopping project ...
+
+    ./$0 down
+
     echo Saving docker images ...
+
+    local images=$(docker images \
+    | grep "${IMAGES_NAME_SUFFIX}" \
+    | grep -E "${original_tag}|${backup_tag}" \
+    | awk '{print $1";"$2}')
 
     for i in $images; do
       local image_and_tag=(${i//;/ })
@@ -95,15 +115,13 @@ case "$1" in
       --project-name {{project}} \
       up \
       $DETACH \
-      --remove-orphans \
       $@
   ;;
   down)
     docker-compose \
       --file ${DIR}/{{project}}.yml \
       --project-name {{project}} \
-      down \
-      --remove-orphans
+      down
   ;;
   start)
     shift
@@ -159,7 +177,6 @@ case "$1" in
     | xargs --no-run-if-empty docker rmi --force
   ;;
   backup)
-    ./$0 down
     backup latest
   ;;
   *)
