--- a/roles/generate_compose/templates/docker-compose.yml.j2
+++ b/roles/generate_compose/templates/docker-compose.yml.j2
@@ -473,3 +473,102 @@ services:
     networks:
       - net
 {% endif %}
+
+{% if "monitoring" in include_service|default([]) %}
+  cadvisor:
+    container_name: {{project}}-cadvisor
+    image: {{registry_url}}{{project}}-cadvisor:latest
+    restart: unless-stopped
+    ports:
+      - "{{bind_ip}}8080:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+    networks:
+      - net
+
+  prometheus:
+    container_name: {{project}}-prometheus
+    image: {{registry_url}}{{project}}-prometheus:latest
+    user: "0"
+    restart: unless-stopped
+    ports:
+      - "{{bind_ip}}9090:9090"
+    volumes:
+      - {{docker_data_dir}}/prometheus/data:/data
+      - {{docker_data_dir}}/prometheus/etc/prometheus:/etc/prometheus
+    entrypoint:
+      - "/entrypoint.sh"
+      - "/bin/prometheus"
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/data'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    depends_on:
+      - cadvisor
+    networks:
+      - net
+
+  grafana:
+    container_name: {{project}}-grafana
+    image: {{registry_url}}{{project}}-grafana:latest
+    user: "0"
+    restart: unless-stopped
+    ports:
+      - "{{bind_ip}}3000:3000"
+    environment:
+      GF_AUTH_BASIC_ENABLED: "false"
+      GF_RENDERING_SERVER_URL: "http://renderer:8081/render"
+      GF_RENDERING_CALLBACK_URL: "http://grafana:3000/"
+      GF_LOG_FILTERS: "rendering:debug"
+      GF_SERVER_ROOT_URL: "https://grafana.{{ conf['domain'] }}/"
+      GF_SERVER_DOMAIN: '{{ conf['domain'] }}'
+    volumes:
+      - {{docker_data_dir}}/grafana/var/lib/grafana:/var/lib/grafana
+      - {{docker_data_dir}}/grafana/etc/grafana:/etc/grafana
+    entrypoint:
+      - "/entrypoint.sh"
+      - "/run.sh"
+    networks:
+      - net
+
+  renderer:
+    container_name: {{project}}-renderer
+    image: {{registry_url}}{{project}}-grafana-image-renderer:latest
+    restart: unless-stopped
+    environment:
+      ENABLE_METRICS: 'true'
+    depends_on:
+      - grafana
+    networks:
+      - net
+
+  node-exporter:
+    container_name: {{project}}-node-exporter
+    image: {{registry_url}}{{project}}-node-exporter:latest
+    restart: unless-stopped
+    ports:
+      - "{{bind_ip}}9100:9100"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)'
+    networks:
+      - net
+
+  pushgateway:
+    container_name: {{project}}-pushgateway
+    image: {{registry_url}}{{project}}-pushgateway:latest
+    restart: unless-stopped
+    ports:
+      - "{{bind_ip}}9091:9091"
+    networks:
+      - net
+{% endif %}
