Moved readonly user params

--- a/roles/generate_compose/templates/docker-compose.yml.j2
+++ b/roles/generate_compose/templates/docker-compose.yml.j2
@@ -49,8 +49,8 @@ services:
       LDAP_ADMIN_PASSWORD: "{{ openldap['ldap_admin_password'] }}"
       LDAP_CONFIG_PASSWORD: "{{ openldap['ldap_config_password'] }}"
       LDAP_READONLY_USER: "true"
-      LDAP_READONLY_USER_USERNAME: "{{ openldap['ldap_readonly_user_username'] }}"
-      LDAP_READONLY_USER_PASSWORD: "{{ openldap['ldap_readonly_user_password'] }}"
+      LDAP_READONLY_USER_USERNAME: "{{ conf['ldap_readonly_user_username'] }}"
+      LDAP_READONLY_USER_PASSWORD: "{{ conf['ldap_readonly_user_password'] }}"
       LDAP_TLS: "true"
       LDAP_TLS_CRT_FILENAME: "cert.crt"
       LDAP_TLS_KEY_FILENAME: "cert.key"
